1999-06-01  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/INSTALL: Point to the patches page.  Update version numbers.

	* example/config.site: Document UDPPORTRANGE.

1999-06-01  Jens Persson  <jens.persson@btj.se>

	* configure.in (UDPPORTRANGE): Set from --with-udpportrange.
	* config/acconfig.h: Add UDPPORTRANGE.
	* common-src/dgram.c: Implement it.

1999-05-27  Mike Grupenhoff <kashmir@munge.com>

	* common-src/alloc.c (alloc, debug_alloc, newalloc, debug_newalloc):
	make the size argument a size_t.
	(alloc): if an allocation fails, in the error message print how
	many bytes we tried to alloc.  This helps us determine if the
	alloc call was errant, or we really were out of memory.
	* common-src/amanda.h: update alloc/newalloc prototypes for
	size_t changes.

1999-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* config/ltconfig, config/ltmain.sh, config/libtool.m4i: Updated
	to libtool 1.3.2 plus a few patches.
	* config/config.guess, config/config.sub: Ditto.

1999-05-26  Mike Grupenhoff <kashmir@munge.com>

	* common-src/protocol.c: retry connection failures three times,
	waiting five seconds between each attempt.  Also, fix a lot
	of untrue comments.

1999-05-26  Mike Grupenhoff <kashmir@munge.com>

	* client-src/amandad.c: add a lot more dbprintfs so we know what's
	going on.
	(service_new): use error() instead of dbprintf(); exit()


1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/FAQ (tar-patch): Mention sparse file problem.

	* recover-src/uscan.l: #undef `ECHO' after #include amanda.h; some
	system header files may define it.
	Reported by Dan Lipofsky <danlip@cyc.com>

	* */Makefile.am: Do not define ACLOCAL_M4, COMPILE or
	AMANDA_CFLAGS.
	* Makefile.am: Create acinclude.m4 in the top-level directory.
	* config/Makefile.am: Create link to acconfig.h in the top-level
	directory.
	* configure.in: Add AMANDA_CFLAGS to CFLAGS.  Set DUMPER_DIR without 
	trying to run it.
	* common-src/Makefile.am: Create genversion.h with #defines, to